--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body></body>
+  <body>
+    <script href="./js/index.js"></script>
+  </body>
 </html>
